rbac-best-practices/restrict-escalation-verbs-roles/restrict-escalation-verbs-roles.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-escalation-verbs-roles
  annotations:
    policies.kyverno.io/title: Restrict Escalation Verbs in Roles
    policies.kyverno.io/category: RBAC Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Role, ClusterRole, RBAC
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/standards: "cis-eks,cis-kubernetes,cis-aks,cis-gke,soc2,iso27001,nsa-cisa,nist-800-53"
    policies.nirmata.io/nsa-cisa-control: "Sec.3.1"
    policies.nirmata.io/nist-800-53-control: "AC-3,AC-6"
    policies.kyverno.io/description: >-
      The verbs `impersonate`, `bind`, and `escalate` may all potentially lead to
      privilege escalation and should be tightly controlled. This policy prevents
      use of these verbs in Role or ClusterRole resources.      
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: escalate
      match:
        any:
        - resources:
            kinds:
              - Role
              - ClusterRole
      validate:
        message: "Use of verbs `escalate`, `bind`, and `impersonate` are forbidden."
        foreach:
        - list: "request.object.rules[]"
          deny:
            conditions:
              all:
              - key: "{{ element.apiGroups || '' }}"
                operator: AnyIn
                value:
                - rbac.authorization.k8s.io
              - key: "{{ element.resources || '' }}"
                operator: AnyIn
                value:
                - clusterroles
                - roles
              - key: "{{ element.verbs }}"
                operator: AnyIn
                value:
                - bind
                - escalate
                - impersonate
